--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -7,10 +7,8 @@
 }
 .movies-card__image {
   object-fit: cover;
-  z-index: 1;
   height: 151px;
   width: 100%;
-  box-sizing: border-box;
   cursor: pointer;
 }
 .movies-card__info {
@@ -21,7 +19,7 @@
   font-size: 13px;
   line-height: 16px;
   font-weight: 500;
-  margin: 14px 0 29px;
+  margin: 14px 0 0;
 }
 .movies-card__time {
   font-size: 11px;
@@ -35,7 +33,7 @@
 .movies-card__like {
   border: none;
   padding: 0;
-  margin: 10px 0 0;
+  margin: 10px 0 25px;
   background-color: transparent;
   background-image: url('../../images/like-disabled.svg');
   width: 24px;
@@ -43,9 +41,11 @@
   cursor: pointer;
 }
 .movies-card__like_active {
+  transition: 0.2s;
   background-image: url('../../images/like-active.svg');
 }
-.movies-card__like_del {
+.movies-card__like_del:hover {
+  transition: 0.2s;
   background-image: url('../../images/like-delete.svg');
 }
 
@@ -60,8 +60,17 @@
     height: 190px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 426px) {
   .movies-card__image {
     height: 168px;
+  }
+  .movies-card__title {
+    font-size: 12px;
+    line-height: 15px;
+    margin: 15px 0 0;
+  }
+  .movies-card__time {
+    font-size: 10px;
+    line-height: 12px;
   }
 }
