--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,6 +8,10 @@
   align-items: center;
   width: 100%;
 }
+.header_main {
+  background-color: #073042;
+}
+
 .header__items {
   display: flex;
   margin: 0;
@@ -19,15 +23,55 @@
 .header__item:first-of-type {
   margin-right: 30px;
 }
+.header__item:nth-of-type(2) {
+  margin-right: 50px;
+}
 .header__link {
   color: #000;
   text-decoration: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+}
+.header__link_active {
   font-weight: 500;
-  font-size: 12px;
-  line-height: 16px;
 }
 
 .header__link:hover {
   opacity: 0.7;
-  transition: 0.7;
+  transition: 0.7s;
+}
+.header__link_white {
+  color: #fff;
+}
+.header__icon {
+  cursor: pointer;
+  background-image: url('../../images/icon-profile.svg');
+  background-color: #f9f9f9;
+  width: 100%;
+  max-width: 26px;
+  min-height: 30px;
+  border-radius: 4px;
+}
+
+/* __________Mobile */
+@media screen and (max-width: 1024px) {
+  .header_mobile {
+  }
+  .header__items {
+    flex-direction: column;
+  }
+  .header__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .header__link_active {
+    text-decoration: underline;
+  }
+  .header__link_white {
+    color: #000;
+  }
+}
+@media screen and (max-width: 426px) {
 }
