--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -41,6 +41,10 @@
   line-height: 17px;
   font-weight: 500;
 }
+.about-me__link:hover {
+  opacity: 0.8;
+  transition: 0.5s;
+}
 .about-me__list {
   list-style: none;
   margin: 0 20px 0 0;
