--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,6 +34,10 @@
   font-size: 13px;
   line-height: 16px;
 }
+.footer__link:hover {
+  opacity: 0.8;
+  transition: 0.5s;
+}
 .footer__list:last-of-type {
   margin: 0;
 }
