--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,9 @@
 .header {
   display: flex;
-  margin: 0 auto;
   padding: 18px 70px;
   max-width: 1140px;
-  align-self: center;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
 }
 .header_main {
   background-color: #073042;
@@ -16,9 +13,11 @@
   display: flex;
   margin: 0;
   padding: 0;
+  align-items: center;
 }
 .header__item {
   list-style: none;
+  display: flex;
 }
 .header__item:first-of-type {
   margin-right: 30px;
@@ -26,7 +25,12 @@
 .header__item:nth-of-type(2) {
   margin-right: 50px;
 }
+.header__item:last-of-type {
+  margin: 0;
+}
 .header__link {
+  display: flex;
+  align-items: center;
   color: #000;
   text-decoration: none;
   font-weight: 400;
@@ -48,18 +52,56 @@
   cursor: pointer;
   background-image: url('../../images/icon-profile.svg');
   background-color: #f9f9f9;
-  width: 100%;
-  max-width: 26px;
+  border: none;
+  padding: 0;
+  margin-left: 17px;
   min-height: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 26px;
   border-radius: 4px;
 }
-
+.header__link-main {
+  font-size: 12px;
+  line-height: 16px;
+  color: #fff;
+  font-weight: 500;
+  text-decoration: none;
+}
+.header__link-main:hover {
+  opacity: 0.8;
+  transition: 0.5s;
+}
+.header__link-main-button {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  text-align: center;
+  border: none;
+  color: #000;
+  background-color: #2be080;
+  border-radius: 3px;
+  padding: 0;
+  width: 76px;
+  height: 32px;
+  cursor: pointer;
+}
+.header__link-main-button:hover {
+  opacity: 0.8;
+  transition: 0.5s;
+}
+.header__btn-burger {
+  display: none;
+}
 /* __________Mobile */
 @media screen and (max-width: 1024px) {
+  .header {
+    padding: 18px 30px;
+  }
   .header_mobile {
   }
   .header__items {
-    flex-direction: column;
+    display: none;
   }
   .header__link {
     font-weight: 500;
@@ -72,6 +114,55 @@
   .header__link_white {
     color: #000;
   }
+  .header__btn-burger {
+    padding: 0;
+    margin: 0;
+    margin-right: 30px;
+    display: block;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    position: relative;
+  }
 }
+.header__btn-burger span,
+.header__btn-burger span::before,
+.header__btn-burger span::after {
+  position: absolute;
+  top: 50%;
+  margin-top: -1px;
+  left: 10px;
+  margin-left: -10px;
+  width: 28px;
+  height: 3px;
+  background-color: white;
+}
+.header__btn-burger span::before,
+.header__btn-burger span::after {
+  content: '';
+  display: block;
+  transition: 0.8s;
+}
+.header__btn-burger span::before {
+  transform: translateY(-12px);
+}
+.header__btn-burger span::after {
+  transform: translateY(12px);
+}
+.header__btn-burger_active span::before {
+  transform: rotate(-40deg);
+  z-index: 2;
+}
+.header__btn-burger_active span {
+  height: 0;
+  z-index: 2;
+}
+.header__btn-burger_active span::after {
+  transform: rotate(40deg);
+  z-index: 2;
+}
+
 @media screen and (max-width: 426px) {
 }
