level-2 | JSX + верстка | start

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,7 @@
-* {
+/* * {
   outline: 1px bisque solid;
 }
-
+ */
 .app {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   text-rendering: optimizeLegibility;
