--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -102,6 +102,35 @@
   }
   .header__items {
     display: none;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .header__item:first-of-type {
+    margin: 159px auto 28px;
+  }
+  .header__item:nth-of-type(2) {
+    margin: 0 auto 28px;
+  }
+  .header__item:last-of-type {
+    margin: 620px auto 92px;
+  }
+  .header__items_active-burger {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    max-width: 520px;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    overflow: -moz-hidden-unscrollable;
+    z-index: 1;
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.6s ease 0s;
   }
   .header__link {
     font-weight: 500;
@@ -117,7 +146,6 @@
   .header__btn-burger {
     padding: 0;
     margin: 0;
-    margin-right: 30px;
     display: block;
     width: 30px;
     height: 30px;
@@ -127,6 +155,7 @@
     position: relative;
   }
 }
+
 .header__btn-burger span,
 .header__btn-burger span::before,
 .header__btn-burger span::after {
@@ -138,6 +167,7 @@
   width: 28px;
   height: 3px;
   background-color: white;
+  z-index: 2;
 }
 .header__btn-burger span::before,
 .header__btn-burger span::after {
@@ -154,15 +184,41 @@
 .header__btn-burger_active span::before {
   transform: rotate(-40deg);
   z-index: 2;
+  background-color: #000;
 }
 .header__btn-burger_active span {
   height: 0;
   z-index: 2;
+  background-color: #000;
 }
 .header__btn-burger_active span::after {
   transform: rotate(40deg);
   z-index: 2;
+  background-color: #000;
+}
+.header__btn-burger_black span,
+.header__btn-burger_black span::before,
+.header__btn-burger_black span::after {
+  background-color: black;
+}
+.header__cover {
+  background: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
 
 @media screen and (max-width: 426px) {
+  .header__item:first-of-type {
+    margin: 144px auto 24px;
+  }
+  .header__item:nth-of-type(2) {
+    margin: 0 auto 24px;
+  }
+  .header__item:last-of-type {
+    margin: 444px auto 48px;
+  }
 }
