--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -39,6 +39,11 @@
   font-weight: 400;
   outline: none;
   color: #000;
+}
+.auth__field:invalid {
+  margin-bottom: 0;
+}
+.auth__field:valid {
   margin-bottom: 24px;
 }
 .auth__field:focus {
@@ -59,6 +64,10 @@
   margin: 152px auto 16px;
   padding: 0;
   cursor: pointer;
+}
+.auth__submit_disabled {
+  background-color: #a0a0a0;
+  cursor: unset;
 }
 .auth__submit:hover {
   opacity: 0.8;
@@ -88,6 +97,24 @@
   opacity: 0.8;
   transition: 0.8s;
 }
+.auth__error {
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 400;
+  padding: 0;
+  color: #ff004d;
+  margin: 6px 0;
+}
+.auth__error-from-server {
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 400;
+  padding: 0;
+  color: #ff004d;
+  position: relative;
+  top: 140px;
+  left: 30%;
+}
 @media screen and (max-width: 426px) {
   .auth {
     max-width: 260px;
@@ -114,5 +141,11 @@
   .auth__caption-link {
     font-size: 12px;
     line-height: 15px;
+  }
+  .auth__error-from-server {
+    top: 220px;
+    left: 10%;
+    width: 200px;
+    text-align: center;
   }
 }
