--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -36,9 +36,12 @@
   margin: 10px 0 25px;
   background-color: transparent;
   background-image: url('../../images/like-disabled.svg');
-  width: 24px;
+  min-width: 24px;
   height: 24px;
   cursor: pointer;
+}
+.movies-card__like_del {
+  background-image: url('../../images/like-delete.svg');
 }
 .movies-card__like:hover {
   transition: 0.4s;
