--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -21,7 +21,7 @@
 .profile__form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   margin: 0;
   width: 100%;
 }
@@ -56,6 +56,7 @@
   line-height: 13px;
   color: #000;
   font-weight: 400;
+  background: transparent;
 }
 /* .profile__field:focus {
   border-bottom: 1px solid #3456f3;
@@ -102,7 +103,7 @@
 }
 .profile__submit_disable {
   background-color: #f8f8f8;
-  margin: 0;
+  cursor: unset;
 }
 .profile__submit:hover {
   opacity: 0.8;
@@ -116,6 +117,24 @@
   max-width: 410px;
   padding: 0;
   margin: 189px auto 20px;
+}
+.profile__error {
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 400;
+  padding: 0;
+  color: #ff004d;
+  margin: 6px 0 0;
+}
+.profile__error-from-server {
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 400;
+  padding: 0;
+  color: #ff004d;
+  position: relative;
+  top: 210px;
+  text-align: center;
 }
 @media screen and (max-width: 426px) {
   .profile {
