--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -37,7 +37,16 @@
   position: absolute;
   right: 7px;
 }
-
+.serch-form-error {
+  position: absolute;
+  top: 6em;
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 400;
+  color: #ff004d;
+}
 @media screen and (max-width: 1024px) {
   .search-form {
     flex-direction: column;
@@ -46,6 +55,13 @@
   .search-form__form {
     margin-right: 0;
     margin-bottom: 38px;
+  }
+  .serch-form-error {
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 400;
+    left: auto;
+    color: #ff004d;
   }
 }
 @media screen and (max-width: 426px) {
