--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -118,12 +118,14 @@
 @media screen and (max-width: 426px) {
   .auth {
     max-width: 260px;
-    margin: 50px 30px 30px;
+    margin: 56px 30px 30px;
+    align-items: center;
   }
   .auth__title {
     font-size: 24px;
     line-height: 29px;
     margin: 50px auto 80px;
+    text-align: center;
   }
   .auth__form {
     max-width: 260px;
